[package]
name = "trains"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
clap = { version = "3.2.5", features = ["derive"] }
derive_builder = "0.11"

pathfinding = "3"
